force-app/main/default/objects/Child_Information_Detail__c/Child_Information_Detail__c.object-meta.xml
<CustomObject>
    <label>Child Information Detail</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Child Information Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Information Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>