force-app/main/default/objects/Child_Information_Detail__c/fields/License_Site__c.field-meta.xml
<CustomField>
    <fullName>License_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Site</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Child Information Details</relationshipLabel>
    <relationshipName>Child_Information_Details</relationshipName>
    <type>Lookup</type>
</CustomField>