force-app/main/default/objects/Child_Information_Detail__c/fields/Maximum_Age_Years__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Age_Years__c</fullName>
    <label>Maximum Age Years</label>
    <length>100</length>
    <type>Text</type>
</CustomField>