force-app/main/default/objects/Child_Information_Detail__c/fields/Minimum_Age_Years__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Age_Years__c</fullName>
    <label>Minimum Age Years</label>
    <length>100</length>
    <type>Text</type>
</CustomField>