force-app/main/default/objects/Child_Information_Detail__c/fields/Number_Of_Children__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Children__c</fullName>
    <label>Number Of Children</label>
    <length>100</length>
    <type>Text</type>
</CustomField>